--- a/build-ESP8266PCReader-Desktop_Qt_5_9_9_MinGW_32bit-Debug/config.ini
+++ b/build-ESP8266PCReader-Desktop_Qt_5_9_9_MinGW_32bit-Debug/config.ini
@@ -1,14 +1,18 @@
 [General]
-COM=COM1
+COM=
 AUTOSETUP=false
 AUTOMinimize=false
+
+[IMAGEINFO]
+IMAGEPATH=false
+LOOP_TIME=1
 
 [OutputSetting]
 HARDWAREINFO=false
 IMAGEINFO=false
 
 [HARDWAREINFO]
-HARDWAREINFO_TIME=2
+HARDWAREINFO_TIME=1
 HARDWAREINFO_CPUuti=false
 HARDWAREINFO_CPUvolt=false
 HARDWAREINFO_GPUvolt=false
@@ -19,6 +23,3 @@ HARDWAREINFO_GPUMCuti=false
 HARDWAREINFO_GPUtmp=false
 HARDWAREINFO_GPUuti=false
 HARDWAREINFO_MENuti=false
-
-[IMAGEINFO]
-LOOP=false
